--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/default_button"
         android:text="@string/enter"
-        android:textColor="@color/background"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
