--- a/app/src/main/res/layout/activity_listen_final_song.xml
+++ b/app/src/main/res/layout/activity_listen_final_song.xml
@@ -68,7 +68,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/notVisibleButton"
         android:layout_marginTop="50dp"
-        android:textColor="@color/background"
+        android:textColor="@color/white"
         android:background="@drawable/default_button"
         android:text="@string/goBackButton"/>
 
