--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,14 +35,14 @@
         android:id="@+id/ownMusicButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/alreadyRecordedSongs"
+        android:layout_below="@+id/logo"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="20sp"
+        android:layout_marginTop="180dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/default_button"
-        android:textColor="@color/white"
         android:text="@string/ownMusicButton"
-        android:textAllCaps="false" />
+        android:textAllCaps="false"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/requestPermissionButton"
