--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="light_purple">#BBA5CC</color>
     <color name="black_visor">#00757b</color>
     <color name="black_purple">#8a47a4</color>
+    <color name="purple_hint">#6e5279</color>
 </resources>
