--- a/app/src/main/res/layout/activity_own_music.xml
+++ b/app/src/main/res/layout/activity_own_music.xml
@@ -22,4 +22,14 @@
         android:layout_below="@+id/searchOwnMusic"
         android:background="@color/background" />
 
+    <Button
+        android:id="@+id/searchFileManually"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/default_button_with_stroke"
+        android:text="@string/searchFileManually"
+        android:onClick="fileChooser"/>
+
     </RelativeLayout>
