--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="100sp"
+        android:layout_marginTop="80dp"
         android:layout_marginRight="50dp"
         android:alpha="0.5"
         android:background="@drawable/default_button"
