--- a/app/src/main/res/layout/activity_own_music.xml
+++ b/app/src/main/res/layout/activity_own_music.xml
@@ -31,7 +31,7 @@
         android:background="@drawable/default_button_with_stroke"
         android:text="@string/searchFileManually"
         android:onClick="fileChooser"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"/>
 
     <TextView
